test/python/expected/pymssql/TestUniqueIdentifier.out
CREATE TABLE uniqueidentifier_dt (a uniqueidentifier);

INSERT INTO uniqueidentifier_dt VALUES ('51f178a6-53c7-472c-9be1-1c08942342d7')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('dd8cb046-461d-411e-be40-d219252ce849')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('b84ebcc9-c927-4cfe-b08e-dc7f25b5087c')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('bab96bc8-60b9-40dd-b0de-c90a80f5739e')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('d424fdef-1404-4bac-8289-c725b540f93d')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('60aeaa5c-e272-4b17-bad0-c25710fd7a60')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('253fb146-7e45-45ef-9d92-bbe14a8ad1b2')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('dba2726c-2131-409f-aefa-5c8079571623')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('b3400fa7-3a60-40ec-b40e-fc85a3eb262d')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES ('851763b5-b068-42ae-88ec-764bfb0e5605')
~~ROW COUNT: 1~~

INSERT INTO uniqueidentifier_dt VALUES (NULL)
~~ROW COUNT: 1~~

SELECT * FROM uniqueidentifier_dt
~~START~~
int
51f178a6-53c7-472c-9be1-1c08942342d7
dd8cb046-461d-411e-be40-d219252ce849
b84ebcc9-c927-4cfe-b08e-dc7f25b5087c
bab96bc8-60b9-40dd-b0de-c90a80f5739e
d424fdef-1404-4bac-8289-c725b540f93d
60aeaa5c-e272-4b17-bad0-c25710fd7a60
253fb146-7e45-45ef-9d92-bbe14a8ad1b2
dba2726c-2131-409f-aefa-5c8079571623
b3400fa7-3a60-40ec-b40e-fc85a3eb262d
851763b5-b068-42ae-88ec-764bfb0e5605
<NULL>
~~END~~

~~ROW COUNT: 11~~


prepst#!#INSERT INTO uniqueidentifier_dt VALUES (%s)#!#uniqueidentifier|-|a|-|51f178a6-53c7-472c-9be1-1c08942342d7
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|767392df-87d0-450d-9b24-85a86c02811d
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|9bcb5632-53c3-4695-b617-d9a7055813ce
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|ac81a140-f686-4259-9b90-dd46f10b355f
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|3d08372d-770c-48b9-9740-a667d036680e
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|518d52c7-4d79-4143-ab33-b3765689fdf4
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|bc3fa456-7391-4060-b5d8-430048075cf4
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|3b75b2dd-01b7-4958-9de7-f92410693547
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|ce8af10a-2709-43b0-9e4e-a02753929d17
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|5b7c2e8d-6d90-411d-8e19-9a81067e6f6c
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|<NULL>
~~ROW COUNT: 1~~

SELECT * FROM uniqueidentifier_dt;
~~START~~
int
51f178a6-53c7-472c-9be1-1c08942342d7
dd8cb046-461d-411e-be40-d219252ce849
b84ebcc9-c927-4cfe-b08e-dc7f25b5087c
bab96bc8-60b9-40dd-b0de-c90a80f5739e
d424fdef-1404-4bac-8289-c725b540f93d
60aeaa5c-e272-4b17-bad0-c25710fd7a60
253fb146-7e45-45ef-9d92-bbe14a8ad1b2
dba2726c-2131-409f-aefa-5c8079571623
b3400fa7-3a60-40ec-b40e-fc85a3eb262d
851763b5-b068-42ae-88ec-764bfb0e5605
<NULL>
51f178a6-53c7-472c-9be1-1c08942342d7
767392df-87d0-450d-9b24-85a86c02811d
9bcb5632-53c3-4695-b617-d9a7055813ce
ac81a140-f686-4259-9b90-dd46f10b355f
3d08372d-770c-48b9-9740-a667d036680e
518d52c7-4d79-4143-ab33-b3765689fdf4
bc3fa456-7391-4060-b5d8-430048075cf4
3b75b2dd-01b7-4958-9de7-f92410693547
ce8af10a-2709-43b0-9e4e-a02753929d17
5b7c2e8d-6d90-411d-8e19-9a81067e6f6c
<NULL>
~~END~~

~~ROW COUNT: 22~~


# to demonstrate the truncation of data when the value is too long
INSERT INTO uniqueidentifier_dt VALUES ('51f178a6-53c7-472c-9be1-1c08942342d7thisIsTooLong')
~~ROW COUNT: 1~~

prepst#!#exec#!#uniqueidentifier|-|a|-|767392df-87d0-450d-9b24-85a86c02811dthisIsTooLong
~~ERROR (Code: 33557097)~~
~~ERROR (Message: "syntax error near '%' at line 1 and character position 40DB-Lib error message 20018, severity 16:\nGeneral SQL Server error: Check messages from the SQL Server\n")~~

SELECT * FROM uniqueidentifier_dt;
~~START~~
int
51f178a6-53c7-472c-9be1-1c08942342d7
dd8cb046-461d-411e-be40-d219252ce849
b84ebcc9-c927-4cfe-b08e-dc7f25b5087c
bab96bc8-60b9-40dd-b0de-c90a80f5739e
d424fdef-1404-4bac-8289-c725b540f93d
60aeaa5c-e272-4b17-bad0-c25710fd7a60
253fb146-7e45-45ef-9d92-bbe14a8ad1b2
dba2726c-2131-409f-aefa-5c8079571623
b3400fa7-3a60-40ec-b40e-fc85a3eb262d
851763b5-b068-42ae-88ec-764bfb0e5605
<NULL>
51f178a6-53c7-472c-9be1-1c08942342d7
767392df-87d0-450d-9b24-85a86c02811d
9bcb5632-53c3-4695-b617-d9a7055813ce
ac81a140-f686-4259-9b90-dd46f10b355f
3d08372d-770c-48b9-9740-a667d036680e
518d52c7-4d79-4143-ab33-b3765689fdf4
bc3fa456-7391-4060-b5d8-430048075cf4
3b75b2dd-01b7-4958-9de7-f92410693547
ce8af10a-2709-43b0-9e4e-a02753929d17
5b7c2e8d-6d90-411d-8e19-9a81067e6f6c
<NULL>
51f178a6-53c7-472c-9be1-1c08942342d7
~~END~~

~~ROW COUNT: 23~~


DROP TABLE uniqueidentifier_dt;
